After teplatetag reviue

--- a/src/templates/contact.html
+++ b/src/templates/contact.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block hed_title %} Contact || {{ block.super }} {% endblock hed_title %}
 {% block content %}
 <h2>Contact</h2>
 {% endblock %}
