--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block hed_title %} About || {{ block.super }} {% endblock %}
 {% block content %}
 <h2>About</h2>
 {% endblock %}
