--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang= pl>
-  <head></head>
+  <head>
+    <title>{% block hed_title %} Muypicky.com {% endblock hed_title %}</title>
+    {% include "snippets/css.html" %}
+  </head>
     <body>
-      <h1>Muypicku.com</h1>
-        <a href="/">Home</a>
-        <a href="/home2/">Home 2</a>
-        <a href="/home3/">Home 3</a>
+      
+      {% include "snippets/nav.html" %}
+       
       <div class="container">
       {% block content %}
       {% endblock content %}
       </div>
+      {% include "snippets/js.html" %}
     </body>
 </html>
