--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -1,7 +1,7 @@
  <div class="container">
  <h1>Muypicku.com</h1>
 
- <a href="/">Home</a>
- <a href="/about/">Aboute</a>
+ <a href="/">Home</a> |
+ <a href="/about/">About</a> |
  <a href="/contact/">Contact</a>
 </div>
